SpiderData/csdn/Clean/03964.txt
PythonSyntaxError语法错误原因及解决方法，Python中的SyntaxError错误是常见Python语言异常错误类型中的一种，表示语法错误，一般是代码出现错误才会报SyntaxError错误。

下面示例是SyntaxError被引发，并告知了检测到的错误异常位置：

>>> priint 'www.iplaypy.com'

File "", line 1

priint 'www.iplaypy.com'

^

SyntaxError: invalid syntax

看示例中python错误提示最后一行SyntaxError: invalid syntax，表示语法错误：无效的语法。

SyntaxError错误解决方法：解决SyntaxError错误办法很简单，知道它代表的意思是语法错误，那就要检查一下代码拼写是否有错。

其实Python语言异常错误提示还是非常人性化的，它会帮你检测哪里出现了问题，就像示例中的 File "", line 1，其实就是告诉了你出现问题的位置。

>>> print 'www.iplaypy.com'

www.iplaypy.com

玩蛇网文章，转载请注明出处和文章网址：https://www.iplaypy.com/jinjie/jj164.html

相关文章 Recommend

